<resources>
    <string name="app_name">Character_v3</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Удалить</string>

    <string name="title_activity_settings">SettingsFragment</string>

    <!-- Preference Titles -->
    <string name="view_header">Внешний вид</string>
    <string name="vid_header">Виды</string>
    <string name="list_header">Вид списка</string>

    <!-- View Preferences -->
    <string name="view_title">Внешний вид приложения</string>
    <string name="list_title">Вид списка</string>

    <!--  Preferences -->
    <string name="dark_theme_title">Темная тема</string>
    <string name="costom_theme_title">Своя тема</string>
    <string name="theme_summary_on">Включена</string>
    <string name="theme_summary_off">Выключена</string>


    <string name="page_create">Имя</string>
    <string name="save">Сохранить</string>

    <string name="name">Имя</string>
    <string name="sex">Пол</string>
    <string name="age">Возраст</string>
    <string name="race">Раса</string>

    <string name="str">Сила</string>
    <string name="dex">Ловкость</string>
    <string name="con">Телосложение</string>
    <string name="intl">Интеллект</string>
    <string name="wis">Мудрость</string>
    <string name="charm">Харизма</string>

    <string name="_8942">⋮</string>
    <string name="see">Посмотреть</string>


</resources>